--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.4.0",
-        "spatie/laravel-permission": "^2.13"
+        "spatie/laravel-permission": "^2.13",
+        "yajra/laravel-datatables": "1.0"
     },
     "require-dev": {
         "appzcoder/crud-generator": "^3.0",
